# castellant-ai

./: .gitignore  Cargo.toml  fix_handlers.sh  railpack.json  seed_blogs.sql
.sqlx/: query-980c512981e71fc74e8e6dc58ba4f78a99c4a3f0cf9fe0edb682298fc2e51039.json  query-f734b83f2b932c7b42718d4c737240ad1fe314eb6cdf17c79f8cef66bcc4bd25.json
migrations/: 20260312000000_init_schema.sql  20260312000001_update_song_url.sql  20260312000002_seed_local_song.sql  20260312000003_add_payment_fields.sql  20260312000004_add_mayar_fields.sql  20260312000005_create_guests.sql  20260312000006_create_groups.sql  20260312000007_add_plan_type_to_invitations.sql  20260312000008_create_bookings.sql  20260312000009_add_vouchers.sql  20260312000010_add_user_type.sql  20260312000011_create_templates_table.sql  20260312000012_add_slug_to_templates.sql  20260312000014_simplify_templates.sql  20260312000015_add_is_featured_to_templates.sql  20260312000016_add_language_to_invitations.sql  20260507000000_add_is_featured_to_templates.sql  20260514000000_add_song_id_to_guests_and_groups.sql  20260515000000_add_stories_data_to_invitations.sql  20260516000000_add_hero_video_position.sql  20260517000000_add_playlist_to_invitations.sql  20260517000001_add_deleted_at_to_invitations.sql  20260526000000_add_preview_video_to_templates.sql  20260528000000_set_super_wedbros_draft.sql  20260528000001_seed_keraton_theme.sql  20260529000000_create_plans_and_referrals.sql  20260529000001_add_user_id_to_referrals.sql  20260530000000_create_blog_posts.sql
scratch/: add_ai_columns.rs  bulk_fix_gifts.py  bulk_fix_gifts_v2.py  bulk_fix_gifts_v3.py  bulk_fix_gifts_v4.py  bulk_fix_gifts_v5.py  check_js_syntax.py  (+20 more)
(+144 files in other folders)
