[package]
name = "castellant"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.4"
axum = "0.8.8"
deadpool-redis = "0.23.0"
dotenvy = "0.15.7"
redis = { version = "1.0.5", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
