[package]
name = "castellant"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.12.1"
axum = { version = "0.8.8", features = ["multipart", "macros"] }
chrono = { version = "0.4.40", features = ["serde"] }
deadpool-redis = "0.23.0"
dotenvy = "0.15.7"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
redis = { version = "1.0.5", features = ["tokio-comp"] }
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
axum-extra = { version = "0.10.1", features = ["cookie", "cookie-private", "cookie-signed"] }
